# solana-assurance-suite

./: .gitignore  EVAL_REPORT.md  README.md  SKILL.md  install.sh
skills/deception-defense/: EVAL_REPORT.md  README.md  install.sh
skills/deception-defense/agents/: deception-hunter.md
skills/deception-defense/commands/: scan-deception.md
skills/deception-defense/rules/: deception.rules.md
skills/deception-defense/skill/: SKILL.md  patterns.md  review-loop.md  scanner.md
skills/solana-agent-eval-skill/: .gitignore  EVAL_REPORT.md  README.md  install-custom.sh  install.sh
skills/solana-attestations-skill/: .gitignore  EVAL_REPORT.md  README.md  install-custom.sh  install.sh
skills/solana-bridge-skill/: .gitignore  README.md  install-custom.sh  install.sh
skills/solana-loops/: EVAL_REPORT.md  LICENSE  README.md  install.sh
skills/solana-qa-automation-skill/: .gitignore  EVAL_REPORT.md  README.md  install-custom.sh  install.sh
skills/solana-sybil-defense/: .gitignore  EVAL_REPORT.md  README.md  install-custom.sh  install.sh
skills/solana-testing-skill/: .gitignore  EVAL_REPORT.md  README.md  install-custom.sh  install.sh
skills/solana-testing-skill/examples/invariant-poc/: Cargo.toml  README.md
skills/solana-testing-skill/examples/invariant-poc/src/: lib.rs
skills/solana-testing-skill/examples/invariant-poc/tests/: invariants.rs
skills/solana-testing-skill/examples/vault-poc/: Cargo.toml  README.md
skills/solana-testing-skill/examples/vault-poc/src/: lib.rs
skills/solana-testing-skill/examples/vault-poc/tests/: withdraw.rs
(+169 files in other folders)
